--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
     <!-- Main section -->
     <main>
       <!-- Hero section -->
-      <section class="section-hd-color">
+      <!-- <section class="section-hd-color">
         <div class="container container-position">
           <h1 class="headline">Effective Solutions for Your Business</h1>
           <button type="button" class="btn-order accent-order" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Advantages section -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 hidden class="title">Advantages</h2>
           <ul class="list group-list">
@@ -129,9 +129,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- About section -->
-      <section class="section-about">
+      <!-- <section class="section-about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
@@ -150,9 +150,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Team section -->
-      <section class="section-team-color section">
+      <!-- <section class="section-team-color section">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="list card-set-adv-about">
@@ -318,9 +318,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Customers section -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="title custom-title">Customers</h2>
           <ul class="link list custom-list">
@@ -369,9 +369,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- Footer section -->
-    <footer class="footer-color">
+    <!-- <footer class="footer-color">
       <div class="container all-footer">
         <div class="logo-part">
           <a class="logo-footer link" href="./index.html"
@@ -435,9 +435,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal form-->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
@@ -524,7 +524,7 @@
           <button type="submit" class="button send-button">Send</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
