--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
       </div>
     </header>
     <!-- Main section -->
-    <main>
+    <!-- <main>
       <section class="section-portfolio">
         <div class="container">
           <h1 hidden class="title">Our work</h1>
@@ -279,9 +279,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- Footer section -->
-    <footer class="footer-color">
+    <!-- <footer class="footer-color">
       <div class="container all-footer">
         <div class="logo-part">
           <a class="logo-footer link" href="./index.html"
@@ -345,6 +345,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
