--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       </div>
     </header>
     <!-- Main section -->
-    <main>
-      <!-- Hero section -->
-      <!-- <section class="section-hd-color">
+    <!-- <main> -->
+    <!-- Hero section -->
+    <!-- <section class="section-hd-color">
         <div class="container container-position">
           <h1 class="headline">Effective Solutions for Your Business</h1>
           <button type="button" class="btn-order accent-order" data-modal-open>
@@ -74,8 +74,8 @@
           </button>
         </div>
       </section> -->
-      <!-- Advantages section -->
-      <!-- <section class="section">
+    <!-- Advantages section -->
+    <!-- <section class="section">
         <div class="container">
           <h2 hidden class="title">Advantages</h2>
           <ul class="list group-list">
@@ -130,8 +130,8 @@
           </ul>
         </div>
       </section> -->
-      <!-- About section -->
-      <!-- <section class="section-about">
+    <!-- About section -->
+    <!-- <section class="section-about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
@@ -151,8 +151,8 @@
           </ul>
         </div>
       </section> -->
-      <!-- Team section -->
-      <!-- <section class="section-team-color section">
+    <!-- Team section -->
+    <!-- <section class="section-team-color section">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="list card-set-adv-about">
@@ -319,8 +319,8 @@
           </ul>
         </div>
       </section> -->
-      <!-- Customers section -->
-      <!-- <section class="section">
+    <!-- Customers section -->
+    <!-- <section class="section">
         <div class="container">
           <h2 class="title custom-title">Customers</h2>
           <ul class="link list custom-list">
