--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             </li>
           </ul>
         </address>
+        <a href="">
+          <svg width="32" height="22">
+            <use href="/images/icons.svg#icon-burger"></use>
+          </svg>
+        </a>
       </div>
     </header>
     <!-- Main section -->
