--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
               >
             </li>
           </ul>
+          <a href="" class="">
+            <svg width="32" height="22">
+              <use href="/images/icons.svg#icon-burger"></use>
+            </svg>
+          </a>
         </address>
-        <a href="">
-          <svg width="32" height="22">
-            <use href="/images/icons.svg#icon-burger"></use>
-          </svg>
-        </a>
       </div>
     </header>
     <!-- Main section -->
