--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
           <a class="logo-header link" href="./index.html"
             >Web<span class="logo-up">Studio</span></a
           >
+          <button class="burger-btn">
+            <a href="" class="">
+              <svg width="32" height="22">
+                <use href="/images/icons.svg#icon-burger"></use>
+              </svg>
+            </a>
+          </button>
           <ul class="header-list list">
             <li>
               <a href="./index.html" class="header-title current link accent"
@@ -60,11 +67,6 @@
               >
             </li>
           </ul>
-          <a href="" class="">
-            <svg width="32" height="22">
-              <use href="/images/icons.svg#icon-burger"></use>
-            </svg>
-          </a>
         </address>
       </div>
     </header>
