--- a/index.html
+++ b/index.html
@@ -533,5 +533,6 @@
       </div>
     </div> -->
     <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/"></script>
   </body>
 </html>
