--- a/index.html
+++ b/index.html
@@ -533,6 +533,6 @@
       </div>
     </div> -->
     <!-- <script src="./js/modal.js"></script> -->
-    <script src="./js/"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
