--- a/index.html
+++ b/index.html
@@ -82,61 +82,61 @@
         </div>
       </section> -->
     <!-- Advantages section -->
-    <!-- <section class="section">
-        <div class="container">
-          <h2 hidden class="title">Advantages</h2>
-          <ul class="list group-list">
-            <li class="card-list-item team">
-              <div class="advantages-icon">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna-1"></use>
-                </svg>
-              </div>
-              <h3 class="title-secondary">Strategy</h3>
-              <p class="par">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="card-list-item team">
-              <div class="advantages-icon">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock-1"></use>
-                </svg>
-              </div>
-              <h3 class="title-secondary">Punctuality</h3>
-              <p class="par">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="card-list-item team">
-              <div class="advantages-icon">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram-1"></use>
-                </svg>
-              </div>
-              <h3 class="title-secondary">Diligence</h3>
-              <p class="par">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="card-list-item team">
-              <div class="advantages-icon">
-                <svg width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut-1"></use>
-                </svg>
-              </div>
-              <h3 class="title-secondary">Technologies</h3>
-              <p class="par">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section> -->
+    <section class="section">
+      <div class="container">
+        <h2 hidden class="title">Advantages</h2>
+        <ul class="list group-list">
+          <li class="card-list-item team">
+            <div class="advantages-icon">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
+            <h3 class="title-secondary">Strategy</h3>
+            <p class="par">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="card-list-item team">
+            <div class="advantages-icon">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
+            </div>
+            <h3 class="title-secondary">Punctuality</h3>
+            <p class="par">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="card-list-item team">
+            <div class="advantages-icon">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
+            <h3 class="title-secondary">Diligence</h3>
+            <p class="par">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="card-list-item team">
+            <div class="advantages-icon">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
+            </div>
+            <h3 class="title-secondary">Technologies</h3>
+            <p class="par">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
     <!-- About section -->
     <!-- <section class="section-about">
         <div class="container">
