--- a/index.html
+++ b/index.html
@@ -31,13 +31,6 @@
           <a class="logo-header link" href="./index.html"
             >Web<span class="logo-up">Studio</span></a
           >
-          <button class="burger-btn">
-            <a href="" class="">
-              <svg width="32" height="22">
-                <use href="/images/icons.svg#icon-burger"></use>
-              </svg>
-            </a>
-          </button>
           <ul class="header-list list">
             <li>
               <a href="./index.html" class="header-title current link accent"
@@ -68,19 +61,24 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn">
+          <svg width="32" height="22">
+            <use href="/images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- Main section -->
-    <!-- <main> -->
+    <main>
     <!-- Hero section -->
-    <!-- <section class="section-hd-color">
-        <div class="container container-position">
-          <h1 class="headline">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn-order accent-order" data-modal-open>
-            Order Service
-          </button>
-        </div>
-      </section> -->
+    <section class="section-hd-color">
+      <div class="container container-position">
+        <h1 class="headline">Effective Solutions for Your Business</h1>
+        <button type="button" class="btn-order accent-order" data-modal-open>
+          Order Service
+        </button>
+      </div>
+    </section>
     <!-- Advantages section -->
     <section class="section">
       <div class="container">
