--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
       </div>
     </section>
     <!-- About section -->
-    <!-- <section class="section-about">
+    <section class="section-about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
             <li class="about-line card-list-item">
-              <img src="./images/computer.jpg" alt="computer" width="360" />
+              <img srcset="./images/computer.jpg" alt="computer" width="360" />
             </li>
             <li class="about-line card-list-item">
               <img src="./images/menu.jpg" alt="mobile_menu" width="360" />
@@ -155,7 +155,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     <!-- Team section -->
     <!-- <section class="section-team-color section">
         <div class="container">
@@ -323,7 +323,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     <!-- Customers section -->
     <!-- <section class="section">
         <div class="container">
