--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
             <li class="about-line card-list-item">
-              <img srcset="./images/computer.jpg" alt="computer" width="360" />
+              <img srcset="./images/computer@X2.jpg" src="./images/computer.jpg" alt="computer" width="360"  height="300"/>
             </li>
             <li class="about-line card-list-item">
-              <img src="./images/menu.jpg" alt="mobile_menu" width="360" />
+              <img srcset="/images/menu@X2.jpg" src="./images/menu.jpg" alt="mobile_menu" width="360"  height="300"/>
             </li>
             <li class="about-line card-list-item">
               <img
+                srcset="./images/mobile@X2.jpg"
                 src="./images/mobile.jpg"
                 alt="computer_mobile"
-                width="360"
+                width="360"  height="300"
               />
             </li>
           </ul>
