--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </section>
     <!-- Team section -->
-    <!-- <section class="section-team-color section">
+    <section class="section-team-color section">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="list card-set-adv-about">
@@ -166,7 +166,7 @@
               <img
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
-                width="264"
+                width="264" height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Mark Guerrero</h3>
@@ -204,7 +204,7 @@
               </div>
             </li>
             <li class="name-color card-list-item team">
-              <img src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" />
+              <img src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
               <div class="subtitle">
                 <h3 class="title-secondary center">Tom Ford</h3>
                 <p class="center">Frontend Developer</p>
@@ -244,7 +244,7 @@
               <img
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
-                width="264"
+                width="264" height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Camila Garcia</h3>
@@ -285,7 +285,7 @@
               <img
                 src="./images/daniel_wilson.jpg"
                 alt="Daniel_Wilson"
-                width="264"
+                width="264" height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Daniel Wilson</h3>
@@ -325,7 +325,7 @@
           </ul>
         </div>
       </section>
-    <!-- Customers section -->
+    <!-- Customers section-->
     <!-- <section class="section">
         <div class="container">
           <h2 class="title custom-title">Customers</h2>
