--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
           <ul class="list card-set-adv-about">
             <li class="name-color card-list-item team">
               <img
+                srscret="./images/mark_guerrero@X2.jpg"
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
                 width="264" height="260"
@@ -204,7 +205,7 @@
               </div>
             </li>
             <li class="name-color card-list-item team">
-              <img src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
+              <img srcset="./images/tom_ford@X2.jpg" src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
               <div class="subtitle">
                 <h3 class="title-secondary center">Tom Ford</h3>
                 <p class="center">Frontend Developer</p>
@@ -242,6 +243,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
+                srscret="./images/camila_garsia@X2.jpg"
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
                 width="264" height="260"
@@ -283,6 +285,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
+                srcset="./images/daniel_wilson@X2.jpg"
                 src="./images/daniel_wilson.jpg"
                 alt="Daniel_Wilson"
                 width="264" height="260"
