--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
       </section>
     </main> -->
     <!-- Footer section -->
-    <!-- <footer class="footer-color">
-      <div class="container all-footer">
+    <footer class="footer-color">
+      <div class="footer-container all-footer">
         <div class="logo-part">
           <a class="logo-footer link" href="./index.html"
             >Web<span class="logo-down">Studio</span></a
@@ -444,9 +444,9 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Modal form-->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="submit" class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
@@ -533,8 +533,8 @@
           <button type="submit" class="button send-button">Send</button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    </div>
+    <script src="./js/modal.js"></script>
     <!-- <script src="./js/mobile-menu.js"></script> -->
   </body>
 </html>
