--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <ul class="list card-set-adv-about">
             <li class="name-color card-list-item team">
               <img
-                srscret="./images/mark_guerrero@X2.jpg"
+                srcset="./images/mark_guerrero@X2.jpg"
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
                 width="264" height="260"
@@ -243,7 +243,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srscret="./images/camila_garsia@X2.jpg"
+                srcset="./images/camila_garsia@X2.jpg"
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
                 width="264" height="260"
