--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
             <li class="about-line card-list-item">
-              <img srcset="./images/computer@X2.jpg" src="./images/computer.jpg" alt="computer" width="360"  height="300"/>
+              <img srcset="./images/computer@X2.jpg X2" src="./images/computer.jpg" alt="computer" width="360"  height="300"/>
             </li>
             <li class="about-line card-list-item">
-              <img srcset="/images/menu@X2.jpg" src="./images/menu.jpg" alt="mobile_menu" width="360"  height="300"/>
+              <img srcset="/images/menu@X2.jpg X2" src="./images/menu.jpg" alt="mobile_menu" width="360"  height="300"/>
             </li>
             <li class="about-line card-list-item">
               <img
-                srcset="./images/mobile@X2.jpg"
+                srcset="./images/mobile@X2.jpg X2"
                 src="./images/mobile.jpg"
                 alt="computer_mobile"
                 width="360"  height="300"
@@ -164,7 +164,7 @@
           <ul class="list card-set-adv-about">
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/mark_guerrero@X2.jpg"
+                srcset="./images/mark_guerrero@X2.jpg X2"
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
                 width="264" height="260"
@@ -205,7 +205,7 @@
               </div>
             </li>
             <li class="name-color card-list-item team">
-              <img srcset="./images/tom_ford@X2.jpg" src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
+              <img srcset="./images/tom_ford@X2.jpg X2" src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
               <div class="subtitle">
                 <h3 class="title-secondary center">Tom Ford</h3>
                 <p class="center">Frontend Developer</p>
@@ -243,7 +243,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/camila_garsia@X2.jpg"
+                srcset="./images/camila_garsia@X2.jpg X2"
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
                 width="264" height="260"
@@ -285,7 +285,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/daniel_wilson@X2.jpg"
+                srcset="./images/daniel_wilson@X2.jpg X2"
                 src="./images/daniel_wilson.jpg"
                 alt="Daniel_Wilson"
                 width="264" height="260"
