--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
             </div>
-            <h3 class="title-secondary">Strategy</h3>
+            <h3 class="title-secondary bolt">Strategy</h3>
             <p class="par">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -102,7 +102,7 @@
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h3 class="title-secondary">Punctuality</h3>
+            <h3 class="title-secondary bolt">Punctuality</h3>
             <p class="par">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -114,7 +114,7 @@
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
-            <h3 class="title-secondary">Diligence</h3>
+            <h3 class="title-secondary bolt">Diligence</h3>
             <p class="par">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -126,7 +126,7 @@
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
-            <h3 class="title-secondary">Technologies</h3>
+            <h3 class="title-secondary bolt">Technologies</h3>
             <p class="par">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
