--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <section class="section-team-color section">
         <div class="container">
           <h2 class="title">Our Team</h2>
-          <ul class="list card-set-adv-about">
+          <ul class="list card-set-adv-about crew">
             <li class="name-color card-list-item team">
               <img
                 srcset="./images/mark_guerrero@X2.jpg X2"
@@ -381,7 +381,7 @@
     </main> -->
     <!-- Footer section -->
     <footer class="footer-color">
-      <div class="footer-container all-footer">
+      <div class="container all-footer">
         <div class="logo-part">
           <a class="logo-footer link" href="./index.html"
             >Web<span class="logo-down">Studio</span></a
