--- a/index.html
+++ b/index.html
@@ -70,95 +70,108 @@
     </header>
     <!-- Main section -->
     <main>
-    <!-- Hero section -->
-    <section class="section-hd-color">
-      <div class="container container-position">
-        <h1 class="headline">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn-order accent-order" data-modal-open>
-          Order Service
-        </button>
-      </div>
-    </section>
-    <!-- Advantages section -->
-    <section class="section">
-      <div class="container">
-        <h2 hidden class="title">Advantages</h2>
-        <ul class="list group-list">
-          <li class="card-list-item team">
-            <div class="advantages-icon">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna-1"></use>
-              </svg>
-            </div>
-            <h3 class="title-secondary bolt">Strategy</h3>
-            <p class="par">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="card-list-item team">
-            <div class="advantages-icon">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
-            </div>
-            <h3 class="title-secondary bolt">Punctuality</h3>
-            <p class="par">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="card-list-item team">
-            <div class="advantages-icon">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram-1"></use>
-              </svg>
-            </div>
-            <h3 class="title-secondary bolt">Diligence</h3>
-            <p class="par">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="card-list-item team">
-            <div class="advantages-icon">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
-            </div>
-            <h3 class="title-secondary bolt">Technologies</h3>
-            <p class="par">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <!-- About section -->
-    <section class="section-about">
+      <!-- Hero section -->
+      <section class="section-hd-color">
+        <div class="container container-position">
+          <h1 class="headline">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn-order accent-order" data-modal-open>
+            Order Service
+          </button>
+        </div>
+      </section>
+      <!-- Advantages section -->
+      <section class="section">
+        <div class="container">
+          <h2 hidden class="title">Advantages</h2>
+          <ul class="list group-list">
+            <li class="card-list-item team">
+              <div class="advantages-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
+              <h3 class="title-secondary bolt">Strategy</h3>
+              <p class="par">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="card-list-item team">
+              <div class="advantages-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
+              <h3 class="title-secondary bolt">Punctuality</h3>
+              <p class="par">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="card-list-item team">
+              <div class="advantages-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
+              <h3 class="title-secondary bolt">Diligence</h3>
+              <p class="par">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="card-list-item team">
+              <div class="advantages-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
+              <h3 class="title-secondary bolt">Technologies</h3>
+              <p class="par">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- About section -->
+      <section class="section-about">
         <div class="container">
           <h2 class="title">What are we doing</h2>
           <ul class="list card-set-adv-about">
             <li class="about-line card-list-item">
-              <img srcset="./images/computer@X2.jpg X2" src="./images/computer.jpg" alt="computer" width="360"  height="300"/>
+              <img
+                srcset="./images/computer@X2.jpg X2"
+                src="./images/computer.jpg"
+                alt="computer"
+                width="360"
+                height="300"
+              />
             </li>
             <li class="about-line card-list-item">
-              <img srcset="/images/menu@X2.jpg X2" src="./images/menu.jpg" alt="mobile_menu" width="360"  height="300"/>
+              <img
+                srcset="/images/menu@X2.jpg X2"
+                src="./images/menu.jpg"
+                alt="mobile_menu"
+                width="360"
+                height="300"
+              />
             </li>
             <li class="about-line card-list-item">
               <img
                 srcset="./images/mobile@X2.jpg X2"
                 src="./images/mobile.jpg"
                 alt="computer_mobile"
-                width="360"  height="300"
+                width="360"
+                height="300"
               />
             </li>
           </ul>
         </div>
       </section>
-    <!-- Team section -->
-    <section class="section-team-color section">
+      <!-- Team section -->
+      <section class="section-team-color section">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="list card-set-adv-about crew">
@@ -167,7 +180,8 @@
                 srcset="./images/mark_guerrero@X2.jpg X2"
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
-                width="264" height="260"
+                width="264"
+                height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Mark Guerrero</h3>
@@ -205,7 +219,13 @@
               </div>
             </li>
             <li class="name-color card-list-item team">
-              <img srcset="./images/tom_ford@X2.jpg X2" src="./images/tom_ford.jpg" alt="Tom_Ford" width="264" height="260"/>
+              <img
+                srcset="./images/tom_ford@X2.jpg X2"
+                src="./images/tom_ford.jpg"
+                alt="Tom_Ford"
+                width="264"
+                height="260"
+              />
               <div class="subtitle">
                 <h3 class="title-secondary center">Tom Ford</h3>
                 <p class="center">Frontend Developer</p>
@@ -246,7 +266,8 @@
                 srcset="./images/camila_garsia@X2.jpg X2"
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
-                width="264" height="260"
+                width="264"
+                height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Camila Garcia</h3>
@@ -288,7 +309,8 @@
                 srcset="./images/daniel_wilson@X2.jpg X2"
                 src="./images/daniel_wilson.jpg"
                 alt="Daniel_Wilson"
-                width="264" height="260"
+                width="264"
+                height="260"
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Daniel Wilson</h3>
@@ -328,8 +350,8 @@
           </ul>
         </div>
       </section>
-    <!-- Customers section-->
-    <!-- <section class="section">
+      <!-- Customers section-->
+      <section class="section">
         <div class="container">
           <h2 class="title custom-title">Customers</h2>
           <ul class="link list custom-list">
@@ -378,7 +400,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- Footer section -->
     <footer class="footer-color">
       <div class="container all-footer">
