--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </main>
     <!-- Footer section -->
     <footer class="footer-color">
-      <div class="container all-footer">
+      <div class="footer-container all-footer">
         <div class="logo-part">
           <a class="logo-footer link" href="./index.html"
             >Web<span class="logo-down">Studio</span></a
