--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <ul class="list card-set-adv-about">
             <li class="about-line card-list-item">
               <img
-                srcset="./images/computer@X2.jpg X2"
+                srcset="./images/computer@X2.jpg 2x"
                 src="./images/computer.jpg"
                 alt="computer"
                 width="360"
@@ -151,7 +151,7 @@
             </li>
             <li class="about-line card-list-item">
               <img
-                srcset="/images/menu@X2.jpg X2"
+                srcset="/images/menu@X2.jpg 2x"
                 src="./images/menu.jpg"
                 alt="mobile_menu"
                 width="360"
@@ -160,7 +160,7 @@
             </li>
             <li class="about-line card-list-item">
               <img
-                srcset="./images/mobile@X2.jpg X2"
+                srcset="./images/mobile@X2.jpg 2x"
                 src="./images/mobile.jpg"
                 alt="computer_mobile"
                 width="360"
@@ -177,7 +177,7 @@
           <ul class="list card-set-adv-about crew">
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/mark_guerrero@X2.jpg X2"
+                srcset="./images/mark_guerrero@X2.jpg 2x"
                 src="./images/mark_guerrero.jpg"
                 alt="Mark_Guerrero"
                 width="264"
@@ -220,7 +220,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/tom_ford@X2.jpg X2"
+                srcset="./images/tom_ford@X2.jpg 2x"
                 src="./images/tom_ford.jpg"
                 alt="Tom_Ford"
                 width="264"
@@ -263,7 +263,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/camila_garsia@X2.jpg X2"
+                srcset="./images/camila_garsia@X2.jpg 2x"
                 src="./images/camila_garsia.jpg"
                 alt="Camila_Garcia"
                 width="264"
@@ -306,7 +306,7 @@
             </li>
             <li class="name-color card-list-item team">
               <img
-                srcset="./images/daniel_wilson@X2.jpg X2"
+                srcset="./images/daniel_wilson@X2.jpg 2x"
                 src="./images/daniel_wilson.jpg"
                 alt="Daniel_Wilson"
                 width="264"
