--- a/index.html
+++ b/index.html
@@ -555,6 +555,15 @@
           <button type="submit" class="button send-button">Send</button>
         </form>
       </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu container">
+          <button>
+            <svg>
+              <use href="./images/icons.svg#icon-Vector"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
