--- a/index.html
+++ b/index.html
@@ -68,14 +68,43 @@
         </button>
       </div>
       <div class="mobile-menu is-open js-menu-container">
-        <div class="container mobile-menu-container">
+        <div class="container-mobile">
           <button type="button" class="close-button js-close-menu">
-            <svg>
+            <svg class="modal-svg" width="8" height="8">
               <use href="./images/icons.svg#icon-Vector"></use>
             </svg>
           </button>
+          <ul class="list burger-menu-list">
+            <li>
+              <a href="./index.html" class="header-title current link accent"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a href="./portfolio.html" class="header-title link accent"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a href="" class="header-title link accent">Contacts</a>
+            </li>
+          </ul>
+           <address class="normalize">
+          <ul class="adress-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link accent adr"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link accent adr"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
+      <script src="./js/mobile-menu.js"></script>
     </header>
     <!-- Main section -->
     <main>
@@ -566,6 +595,5 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
