--- a/index.html
+++ b/index.html
@@ -102,6 +102,36 @@
               >
             </li>
           </ul>
+          <ul class="link list team-list">
+                  <li class="team-item">
+                    <a href="" class="team-link">
+                      <svg class="decor-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item">
+                    <a href="" class="team-link">
+                      <svg class="decor-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item">
+                    <a href="" class="team-link">
+                      <svg class="decor-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-item">
+                    <a href="" class="team-link">
+                      <svg class="decor-team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
         </div>
       </div>
       <script src="./js/mobile-menu.js"></script>
