--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               >
             </li>
           </ul>
-          <ul class="link list team-list">
+          <ul class="link list team-list mobile-social">
                   <li class="team-item">
                     <a href="" class="team-link">
                       <svg class="decor-team-icon" width="16" height="16">
