--- a/index.html
+++ b/index.html
@@ -89,49 +89,52 @@
               <a href="" class="header-title link accent">Contacts</a>
             </li>
           </ul>
-           <address class="normalize">
-          <ul class="adress-list list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="link accent adr"
-                >info@devstudio.com</a
-              >
+          <address class="normalize">
+            <ul class="adress-call list">
+              <li>
+                <a href="tel:+110001111111" class="link accent adr"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link accent adr mob-mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="link list team-list mobile-social">
+            <li class="team-item">
+              <a href="" class="team-link">
+                <svg class="decor-team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram-2-1"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+110001111111" class="link accent adr"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="team-item">
+              <a href="" class="team-link">
+                <svg class="decor-team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-item">
+              <a href="" class="team-link">
+                <svg class="decor-team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-item">
+              <a href="" class="team-link">
+                <svg class="decor-team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-          <ul class="link list team-list mobile-social">
-                  <li class="team-item">
-                    <a href="" class="team-link">
-                      <svg class="decor-team-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram-2-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item">
-                    <a href="" class="team-link">
-                      <svg class="decor-team-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item">
-                    <a href="" class="team-link">
-                      <svg class="decor-team-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-item">
-                    <a href="" class="team-link">
-                      <svg class="decor-team-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
         </div>
       </div>
       <script src="./js/mobile-menu.js"></script>
