--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </li>
             </ul>
           </address>
-          <ul class="link list team-list mobile-social">
+          <ul class="link list mobile-social">
             <li class="team-item">
               <a href="" class="team-link">
                 <svg class="decor-team-icon" width="16" height="16">
