--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </li>
             <li class="about-line card-list-item">
               <img
-                srcset="/images/menu@X2.jpg 2x"
+                srcset="./images/menu@X2.jpg 2x"
                 src="./images/menu.jpg"
                 alt="mobile_menu"
                 width="360"
