--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Mark Guerrero</h3>
-                <p class="center">Product Designer</p>
+                <p class="center profesion">Product Designer</p>
                 <ul class="link list team-list">
                   <li class="team-item">
                     <a href="" class="team-link">
@@ -299,7 +299,7 @@
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Tom Ford</h3>
-                <p class="center">Frontend Developer</p>
+                <p class="center profesion">Frontend Developer</p>
                 <ul class="link list team-list">
                   <li class="team-item">
                     <a href="" class="team-link">
@@ -342,7 +342,7 @@
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Camila Garcia</h3>
-                <p class="center">Marketing</p>
+                <p class="center profesion">Marketing</p>
                 <ul class="link list team-list">
                   <li class="team-item">
                     <a href="" class="team-link">
@@ -385,7 +385,7 @@
               />
               <div class="subtitle">
                 <h3 class="title-secondary center">Daniel Wilson</h3>
-                <p class="center">UI Designer</p>
+                <p class="center profesion">UI Designer</p>
                 <ul class="link list team-list">
                   <li class="team-item">
                     <a href="" class="team-link">
