--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </address>
         <button class="burger-menu-btn js-open-menu">
           <svg width="32" height="22">
-            <use href="/images/icons.svg#icon-burger"></use>
+            <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
