--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
           </button>
           <ul class="list burger-menu-list">
             <li>
-              <a href="./index.html" class="header-title current link accent"
+              <a
+                href="./index.html"
+                class="header-mobile-nav current link accent"
                 >Studio</a
               >
             </li>
             <li>
-              <a href="./portfolio.html" class="header-title link accent"
+              <a href="./portfolio.html" class="header-mobile-nav link accent"
                 >Portfolio</a
               >
             </li>
             <li>
-              <a href="" class="header-title link accent">Contacts</a>
+              <a href="" class="header-mobile-nav link accent">Contacts</a>
             </li>
           </ul>
           <address class="normalize">
