--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li>
               <a
                 href="./index.html"
-                class="header-mobile-nav current link accent"
+                class="header-mobile-nav active link accent"
                 >Studio</a
               >
             </li>
@@ -91,9 +91,9 @@
               <a href="" class="header-mobile-nav link accent">Contacts</a>
             </li>
           </ul>
-          <address class="normalize">
+          <address class="adress-mob">
             <ul class="adress-call list">
-              <li>
+              <li class="mob-tel">
                 <a href="tel:+110001111111" class="link accent adr"
                   >+11 (000) 111-11-11</a
                 >
